--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.9.2",
+    "js-cookie": "^3.0.5",
     "nodemon": "^3.1.0",
-    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
